--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <input type="text" id="input-field" class="buttxt" placeholder="Bread">
         <button id="add-button"> Add to cart</button>
     </main>
-    <script src="index.js"></script>
+    <script src="index.js" type="module"></script>
 
 </body>
 </html>
